added empty activities for all screens

--- a/AdHoc/AndroidManifest.xml
+++ b/AdHoc/AndroidManifest.xml
@@ -22,6 +22,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.codepath.adhoc.EventListActivity"
+            android:label="@string/title_activity_event_list" >
+        </activity>
+        <activity
+            android:name="com.codepath.adhoc.EventDetailsActivity"
+            android:label="@string/title_activity_event_details" >
+        </activity>
+        <activity
+            android:name="com.codepath.adhoc.CreateEventActivity"
+            android:label="@string/title_activity_create_event" >
+        </activity>
+        <activity
+            android:name="com.codepath.adhoc.LocationActivity"
+            android:label="@string/title_activity_location" >
+        </activity>
     </application>
 
 </manifest>
