--- a/AdHoc/AndroidManifest.xml
+++ b/AdHoc/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-sdk
         android:minSdkVersion="10"
-        android:targetSdkVersion="19" />
+        android:targetSdkVersion="18" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -57,6 +57,15 @@
             android:name="com.codepath.adhoc.LocationActivity"
             android:label="@string/title_activity_location" >
         </activity>
+        
+        <!--  Facebook information -->
+         <meta-data
+        	android:name="com.facebook.sdk.ApplicationId"
+        	android:value="@string/app_id" />
+         <activity
+        	android:name="com.facebook.LoginActivity"
+        	android:label="@string/fbConnect" >
+    	</activity>
 
         <!-- For push notifications via Parse -->
         <service android:name="com.parse.PushService" />
