--- a/AdHoc/AndroidManifest.xml
+++ b/AdHoc/AndroidManifest.xml
@@ -17,8 +17,8 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <!--
-  IMPORTANT: Change "com.parse.starter.permission.C2D_MESSAGE" in the lines below
-  to match your app's package name + ".permission.C2D_MESSAGE".
+IMPORTANT: Change "com.parse.starter.permission.C2D_MESSAGE" in the lines below
+to match your app's package name + ".permission.C2D_MESSAGE".
     -->
     <permission
         android:name="com.codepath.adhoc.permission.C2D_MESSAGE"
@@ -31,42 +31,42 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.Base.AppCompat.Light.DarkActionBar" >
         <activity
-            android:name="com.codepath.adhoc.MainActivity"
+            android:name="com.codepath.adhoc.activities.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
-            android:name="com.codepath.adhoc.EventListActivity"
+            android:name="com.codepath.adhoc.activities.EventListActivity"
             android:label="@string/title_activity_event_list" >
         </activity>
         <activity
-            android:name="com.codepath.adhoc.EventDetailsActivity"
+            android:name="com.codepath.adhoc.activities.EventDetailsActivity"
             android:label="@string/title_activity_event_details" >
         </activity>
         <activity
-            android:name="com.codepath.adhoc.CreateEventActivity"
+            android:name="com.codepath.adhoc.activities.CreateEventActivity"
             android:label="@string/title_activity_create_event" >
         </activity>
         <activity
-            android:name="com.codepath.adhoc.LocationActivity"
+            android:name="com.codepath.adhoc.activities.LocationActivity"
             android:label="@string/title_activity_location" >
         </activity>
-        
-        <!--  Facebook information -->
-         <meta-data
-        	android:name="com.facebook.sdk.ApplicationId"
-        	android:value="@string/app_id" />
-         <activity
-        	android:name="com.facebook.LoginActivity"
-        	android:label="@string/login_button_fb" >
-    	</activity>
+
+        <!-- Facebook information -->
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
+
+        <activity
+            android:name="com.facebook.LoginActivity"
+            android:label="@string/login_button_fb" >
+        </activity>
 
         <!-- For push notifications via Parse -->
         <service android:name="com.parse.PushService" />
@@ -88,6 +88,11 @@
                 <category android:name="com.codepath.adhoc" />
             </intent-filter>
         </receiver>
+
+        <activity
+            android:name="com.codepath.adhoc.activities.CreateEventMapActivity"
+            android:label="@string/title_activity_create_event_map" >
+        </activity>
     </application>
 
 </manifest>
