--- a/AdHoc/AndroidManifest.xml
+++ b/AdHoc/AndroidManifest.xml
@@ -29,7 +29,7 @@ to match your app's package name + ".permission.C2D_MESSAGE".
     <application
         android:name="com.codepath.adhoc.application.ParseApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_launcher_soccer_ball"
         android:label="@string/app_name"
         android:theme="@style/Theme.Base.AppCompat.Light.DarkActionBar" >
         <activity
