--- a/AdHoc/bin/AndroidManifest.xml
+++ b/AdHoc/bin/AndroidManifest.xml
@@ -29,7 +29,7 @@ to match your app's package name + ".permission.C2D_MESSAGE".
     <application
         android:name="com.codepath.adhoc.application.ParseApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_launcher_soccer_ball"
         android:label="@string/app_name"
         android:theme="@style/Theme.Base.AppCompat.Light.DarkActionBar" >
         <activity
@@ -39,6 +39,16 @@ to match your app's package name + ".permission.C2D_MESSAGE".
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="twitterapp"
+                    android:scheme="oauth" />
             </intent-filter>
         </activity>
         <activity
@@ -90,7 +100,7 @@ to match your app's package name + ".permission.C2D_MESSAGE".
         </receiver>
 
         <activity
-            android:name="com.codepath.adhoc.activities.CreateEventMapActivity"
+            android:name="com.codepath.adhoc.fragments.CreateEventMapActivity"
             android:label="@string/title_activity_create_event_map" >
         </activity>
     </application>
