--- a/AdHoc/project.properties
+++ b/AdHoc/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../../../Documents/workspace/android-support-v7-appcompat
-android.library.reference.2=../FacebookSDK
+android.library.reference.1=../FacebookSDK
+android.library.reference.2=../android-support-v7-appcompat
