--- a/AdHoc/project.properties
+++ b/AdHoc/project.properties
@@ -13,4 +13,5 @@
 # Project target.
 target=android-19
 android.library.reference.1=..\\FacebookSDK
-android.library.reference.2=../../../Desktop/adt-bundle-windows-x86_64-20131030/sdk/extras/android/support/v7/appcompat
+android.library.reference.2=..\\..\\..\\adt-bundle-windows-x86_64-20130917\\sdk\\extras\\android\\support\\v7\\appcompat
+android.library.reference.3=../../../adt-bundle-windows-x86_64-20130917/sdk/extras/google/google_play_services/libproject/google-play-services_lib
