--- a/AdHoc/bin/AndroidManifest.xml
+++ b/AdHoc/bin/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="10"
+        android:minSdkVersion="11"
         android:targetSdkVersion="18" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,8 +14,11 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    
     <!--
 IMPORTANT: Change "com.parse.starter.permission.C2D_MESSAGE" in the lines below
 to match your app's package name + ".permission.C2D_MESSAGE".
@@ -23,9 +26,11 @@ to match your app's package name + ".permission.C2D_MESSAGE".
     <permission
         android:name="com.codepath.adhoc.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
-
+    <permission
+        android:name="com.codepath.adhoc.locationapi.maps.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+    
     <uses-permission android:name="com.codepath.adhoc.permission.C2D_MESSAGE" />
-
     <application
         android:name="com.codepath.adhoc.application.ParseApplication"
         android:allowBackup="true"
@@ -72,7 +77,12 @@ to match your app's package name + ".permission.C2D_MESSAGE".
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id" />
-
+		<meta-data
+     		android:name="com.google.android.maps.v2.API_KEY"
+     		android:value="AIzaSyASn7zKQiYbGsxezFzGDCvEqh5TeO2R5YQ" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
         <activity
             android:name="com.facebook.LoginActivity"
             android:label="@string/login_button_fb" >
