--- a/PullToRefreshListView/project.properties
+++ b/PullToRefreshListView/project.properties
@@ -11,7 +11,5 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-19
-android.library.reference.1=../android-support-v7-appcompat
-android.library.reference.2=../../../Documents/workspace/PullToRefreshListView
-android.library.reference.3=../../../Documents/workspace/google-play-services_lib
+target=android-7
+android.library=true
