-map no longer constantly polls -can no longer move pin -detail map screen static -map for details now displays location after calling set location -details displays address string, if set -map view grabs list of events

--- a/AdHoc/AndroidManifest.xml
+++ b/AdHoc/AndroidManifest.xml
@@ -72,6 +72,10 @@ to match your app's package name + ".permission.C2D_MESSAGE".
             android:name="com.codepath.adhoc.activities.LocationActivity"
             android:label="@string/title_activity_location" >
         </activity>
+        <activity
+            android:name="com.codepath.adhoc.activities.LocationCreationActivity"
+            android:label="@string/title_activity_location" >
+        </activity>
 
         <!-- Facebook information -->
         <meta-data
