--- a/AdHoc/bin/AndroidManifest.xml
+++ b/AdHoc/bin/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="10"
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -72,6 +72,10 @@ to match your app's package name + ".permission.C2D_MESSAGE".
             android:name="com.codepath.adhoc.activities.LocationActivity"
             android:label="@string/title_activity_location" >
         </activity>
+        <activity
+            android:name="com.codepath.adhoc.activities.LocationCreationActivity"
+            android:label="@string/title_activity_location" >
+        </activity>
 
         <!-- Facebook information -->
         <meta-data
@@ -79,7 +83,7 @@ to match your app's package name + ".permission.C2D_MESSAGE".
             android:value="@string/app_id" />
 		<meta-data
      		android:name="com.google.android.maps.v2.API_KEY"
-     		android:value="AIzaSyASn7zKQiYbGsxezFzGDCvEqh5TeO2R5YQ" />
+     		android:value="AIzaSyDOBr-nd2lzlxJ43x9Wh8mbFdAHfE0l9hU" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
