--- a/AdHoc/project.properties
+++ b/AdHoc/project.properties
@@ -12,6 +12,6 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../android-support-v7-appcompat
-android.library.reference.2=../../../Documents/workspace/google-play-services_lib
-android.library.reference.3=../PullToRefreshListView
+android.library.reference.1=../../../Workspaces/Eclipse 4.2 Classic/android-support-v7-appcompat
+android.library.reference.2=../../../Downloads/PullToRefresh-ListView-master/libraryproject
+android.library.reference.3=../../../Workspaces/Eclipse 4.2 Classic/google-play-services_lib
