--- a/AdHoc/AndroidManifest.xml
+++ b/AdHoc/AndroidManifest.xml
@@ -36,7 +36,7 @@ to match your app's package name + ".permission.C2D_MESSAGE".
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher_soccer_ball"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Base.AppCompat.Light.DarkActionBar" >
+        android:theme="@style/Theme.Adhocactionbar" >
         <activity
             android:name="com.codepath.adhoc.activities.MainActivity"
             android:screenOrientation="portrait"
@@ -95,7 +95,7 @@ to match your app's package name + ".permission.C2D_MESSAGE".
             android:value="@string/app_id" />
 		<meta-data
      		android:name="com.google.android.maps.v2.API_KEY"
-     		android:value="AIzaSyCcG3Q0t9o7zUV5Bj3QvUFPNTLM3Aj_huY" />
+     		android:value="AIzaSyDOBr-nd2lzlxJ43x9Wh8mbFdAHfE0l9hU" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
